updated project structure to creat runnable jar